force-app/main/default/objects/Field__c/Field__c.object-meta.xml
<CustomObject>
    <label>תחום</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>שם תחום</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>תחומים</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>