force-app/main/default/objects/Field__c/fields/FieldArabicName__c.field-meta.xml
<CustomField>
    <fullName>FieldArabicName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>שם בערבית</label>
    <length>255</length>
    <type>Text</type>
</CustomField>