force-app/main/default/objects/Field__c/fields/FieldEnglishName__c.field-meta.xml
<CustomField>
    <fullName>FieldEnglishName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>שם באנגלית</label>
    <length>255</length>
    <type>Text</type>
</CustomField>