force-app/main/default/objects/Field__c/fields/FieldExtId__c.field-meta.xml
<CustomField>
    <fullName>FieldExtId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>מזהה חיצוני</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>